<!--
  ~ Copyright (c) 2022-2024 Universitat Politècnica de València
  ~ Authors: David de Andrés and Juan Carlos Ruiz
  ~          Fault-Tolerant Systems
  ~          Instituto ITACA
  ~          Universitat Politècnica de València
  ~
  ~ Distributed under MIT license
  ~ (See accompanying file LICENSE.txt)
  -->
<resources>
    <string name="app_name">Ex06_Layouts</string>
    <!--Text for layout selection Button and ShowLayoutActivity-->
    <string name="vertical">Vertical layout</string>
    <string name="horizontal">Horizontal layout</string>
    <string name="nested">Nested layouts</string>
    <string name="relative">Relative layout (old)</string>
    <string name="constraint">Constraint layout (recommended)</string>
    <string name="frame">Frame layout</string>
    <string name="table">Table layout</string>
    <string name="grid">Grid layout (legacy)</string>
    <string name="no_title">Untitled activity</string>
    <!--Text for View arranged in different layouts-->
    <string name="button1">Button 1</string>
    <string name="button2">Button 2</string>
    <string name="button3">Button 3</string>
    <string name="button4">Button 4</string>
    <string name="button5">Button 5</string>
    <string name="long_text">Button with looooooooong text</string>
    <string name="top">Top</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="bottom">Bottom</string>
    <string name="center">Centred</string>
    <string name="top_left">Top Left</string>
    <string name="bottom_right">Bottom Right</string>
    <string name="between12">Between 1 and 2\nright side</string>
    <string name="between23">Between 2 and 3\nleft side</string>
    <string name="right_below_1">Right and below 1</string>
    <string name="between_center_bottom">
        Between centred\nand bottom,\naligned end\nof centred</string>
    <string name="in_frame">Button in a frame layout</string>
</resources>