<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2022-2026 Universitat Politècnica de València
  ~ Authors: David de Andrés and Juan Carlos Ruiz
  ~          Fault-Tolerant Systems
  ~          Instituto ITACA
  ~          Universitat Politècnica de València
  ~
  ~ Distributed under MIT license
  ~ (See accompanying file LICENSE.txt)
  -->

<!-- ScrollView enables scrolling through all the Buttons when they do not fit in the screen (landscape) -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/side_margins"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/bVertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vertical" />

        <Button
            android:id="@+id/bHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/horizontal" />

        <Button
            android:id="@+id/bNested"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nested" />

        <Button
            android:id="@+id/bRelative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/relative" />

        <Button
            android:id="@+id/bConstraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/constraint" />

        <Button
            android:id="@+id/bFrame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/frame" />

        <Button
            android:id="@+id/bTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/table" />

        <Button
            android:id="@+id/bGrid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/grid" />
    </LinearLayout>
</ScrollView>