<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2022
  ~ David de Andrés and Juan Carlos Ruiz
  ~ Development of apps for mobile devices
  ~ Universitat Politècnica de València
  -->

<!-- Vertical LinearLayout that positions one View below another -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/button1" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/button2" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/long_text" />

</LinearLayout>