<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2022
  ~ David de Andrés and Juan Carlos Ruiz
  ~ Development of apps for mobile devices
  ~ Universitat Politècnica de València
  -->

<!--
  ~ Horizontal LinearLayout that positions one View after another (left to right)
  ~ Formatted using a ButtonBarStyle
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="?android:attr/buttonBarStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="horizontal">

    <Button
        android:id="@+id/button"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/button1" />

    <Button
        android:id="@+id/button2"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:text="@string/button2" />

    <Button
        android:id="@+id/button3"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/long_text" />

</LinearLayout>